# C2DN

./: README.md
CDNSimulator/: .gitignore  .sshyncignore  CMakeLists.txt  LICENSE  README.md
CDNSimulator/libCacheSim/: README.md
CDNSimulator/libCacheSim/cache/: cache.c
CDNSimulator/libCacheSim/dataStructure/hashtable/: chainedHashtable.c  hashtableStruct.h
CDNSimulator/libCacheSim/evictionAlgo/: FIFO.c  LRU.c
CDNSimulator/libCacheSim/include/: config.h  libCacheSim.h
CDNSimulator/libCacheSim/include/libCacheSim/: cache.h  macro.h  struct.h
CDNSimulator/libCacheSim/include/libCacheSim/evictionAlgo/: slabCommon.h
CDNSimulator/src/: CMakeLists.txt  cacheCluster.cpp  cacheClusterThread.cpp  cacheServer.cpp  consistentHash.cpp  md5.c  simulator.cpp
CDNSimulator/src/include/: C2DNconfig.h  cacheCluster.hpp  cacheClusterThread.hpp  cacheServer.hpp  consistentHash.hpp  constCDNSimulator.hpp  hasher.hpp  md5.h  simulator.hpp  stat.hpp  utils.h
prototype/: README
prototype/c2dn/: README.md  go.mod  go.sum  tests.sh
prototype/c2dn/cmd/benchmarks/: ecBenchmark.go  ecBenchmarkShare.go  ecBenchmarkSimple.go  latency.go  objSize.go  request.go  utils.go
prototype/c2dn/cmd/client/: akamaiWorklaod.go  client.go  main.go  request.go  struct.go  syntheticWorkload.go  utils.go
prototype/c2dn/cmd/frontend/: dramcache.go  ec.go  frontend.go  get.go  httphandler.go  main.go  push.go  push.sh  pushErr  samplePushRequest  struct.go  utils.go
prototype/c2dn/cmd/mytest/: loadBalancing.go  main.go  netTest.go  pushTest.go  test.go  traceUtils.go  utils.go
prototype/c2dn/cmd/origin/: main.go  origin.go
prototype/c2dn/config/: unavailability.one
prototype/c2dn/script/: genTrace.py
prototype/c2dn/script/analysis/: extractData.py  plotLatency.py  plotOverhead.py  prepareData.sh
prototype/c2dn/src/loadbalancer/: balancer.go  balancer_test.go  chbalancer.go  consistenthash.go  parityRebalance.go  unavailability.akamai  unavailability.one
prototype/c2dn/src/myconst/: myConst.go
prototype/c2dn/src/mymetrics/: client.go
prototype/c2dn/src/mytools/: traceUtils.go  traceUtils2.go
prototype/c2dn/src/myutils/: configUtils.go  misc.go  (+6 more)
(+28 files in other folders)
